--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Breaking List</title>
+    <title>Live Demo</title>
   </head>
   <body>
     <div id="root"></div>
