--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link rel="canonical" href="https://www.sandraferraz.com.br" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#e4e4e4" />
+
+    <meta name="robots" content="index, nofollow" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sandra Ferraz"
     />
 
-    <title>Live Demo</title>
+    <title>Sandra Ferraz</title>
   </head>
   <body>
     <div id="root"></div>
