add fav icon and description

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="canonical" href="https://www.sandraferraz.com.br" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="theme-color" content="#e4e4e4" />
-
+    <link rel="icon" type="image/png" href="favIcon.png"/>
     <meta name="robots" content="index, nofollow" />
     <meta
       name="description"
-      content="Sandra Ferraz"
+      content="Buscando levar beleza ao mundo, uma rotina de experiências únicas que intermediam seu encontro com o vestido dos seus sonhos."
     />
 
     <title>Sandra Ferraz</title>
