desc try to change

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="theme-color" content="#e4e4e4" />
     <link rel="icon" type="image/png" href="favIcon.png"/>
+    <link rel="apple-touch-icon" href="favIcon.png" />
     <meta name="robots" content="index, nofollow" />
     <meta
       name="description"
