--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,27 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#e4e4e4" />
-    <link rel="icon" type="image/png" href="favIcon.png"/>
+    <link rel="icon" type="image/png" href="favIcon.png" />
     <link rel="apple-touch-icon" href="favIcon.png" />
     <meta name="robots" content="index, nofollow" />
     <meta
       name="description"
       content="Buscando levar beleza ao mundo, uma rotina de experiências únicas que intermediam seu encontro com o vestido dos seus sonhos."
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-170185738-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-170185738-1');
+    </script>
 
     <title>Sandra Ferraz</title>
   </head>
